0.55.2
------
1. Add warning to -DQTC_ADD_EVENT_FILTER option.

0.55.1
------
1. Only allow coloured selected tabs if tab appearance is set to gradient.
2. Allow triangular sliders when not rounding.

0.55
----
 1. Ability to create custom themes. See Theme details in 'README' file.
 2. Fix for 'inactiveHighlight' and KDE's apply colours to non-KDE apps.
 3. Allow 'flat' lines in scrollbar handles, toolbar handles, toolbar
    separators, and splitters.
 4. Option for 'X' style checkmarks.
 5. Option to have colour the selcted tab.
 6. Optional diagonal progressbar sripes.
 7. Use alternating dark/light for dashed toolbar handles.
 8. New 'split' style gradient.
 9. Option to specift slider style: plain, round (only when appearance=round),
    and triangular (plastik-ish)
10. Modify default style: flat splitter lines, flat slider thumbs, no
    toolbar separators, triangular slider, diagonal progressbar stripes.

0.54.1
------
1. Supply a simple 'mkpkg' script to create packages with checkinstall.
2. Fix compilation when cmake is called with -DQTC_MODIFY_MOZILLA=true
3. Dont free() the values returned from gtk_widget_style_get(), use
   gtk_requisition_free() and gtk_border_free()
4. Fix frameless groupboxes in Gimp 2.4
5. After free'ing memory, set var to NULL.

0.54
----
1. Converted buildsystem to CMake.
2. New option 'inactiveHighlight', if set then use a mix of highlight and background
   colour as highlight for inactive windows/elements.
3. Fix broken 'Thinner Menuitems' option.
4. Better code for alternate list view background.
5. Also read in Qt's inactive palette.
6. If read a font setting from /etc/qt3/qtrc, and there is not font setting
   in ~/.qt/qtrc - then use the setting from /etc/qt3/qtrc, as opposed to setting
   a default.
7. When reading Qt4 settings, also read /etc/xdg/Trolltech.conf
8. Nicer look for selected tab highlight.
9. realloc() fix - thanks to 'hoodedone'

0.53
----